# configman

./: .dottyrc  .gitignore  .ignore  Cargo.toml  README.md
src/: cli.rs  dotty.rs  main.rs  utils.rs
