[package]
name = "configman"
version = "0.3.0"
authors = ["pjmp"]
edition = "2018"
description = "Dead simple config manager"
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pjmp/configman"
keywords = ["dotfiles", "config manager", "symlink", "configman"]

[dependencies]
ignore = "0.4.18"
clap = "3.0.0-beta.2"
dialoguer = "0.8.0"
log = "0.4.14"
fmtlog = {version = "0.1.4", default-features = false, features = ["colored"]}
